# NBA-LeagueSimulationInC

./: CMakeLists.txt  README.md  basketball_sim.h  colors.h  file_io.c  main.c  match.c  player.c  playoffs.c  schedule.c  season_manager.c  simulation.c  standings.c  team.c  ui.c  utils.c
data/: nba_players.txt
